--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body {
 }
 
 .navbar a {
+  font-family: 'Times New Roman', serif;
   color: rgb(212, 214, 173);
   padding: 14px 20px;
   text-align: center;
