--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,10 @@ img {
   border-radius: 5px; /* Optional: for rounded corners */
 }
 
+ul {
+  list-style: none;
+}
+
 h1, h2 {
   color: #4F9D69;
 }
